--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>WebSiteTask</title>
 </head>
 <body>
-<link href="style.css" rel="stylesheet">
+<link href="style.css" rel="stylesheet"> <!--GithubPagesはBody内にCSSを適応させないと反応しません！--->
+<!--ここからHTMLコードを書いてください-->
+
 </body>
 </html>
