--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
 <link href="style.css" rel="stylesheet"> <!--GithubPagesはBody内にCSSを適応させないと反応しません！--->
 <!--ここからHTMLコードを書いてください-->
-
+<div class="Heder">
+<h3>これは製作用の文字列です</h3>
+</div>
 </body>
 </html>
