--- a/index.html
+++ b/index.html
@@ -3,41 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>WebSiteTask</title>
+    <link href=icon/Webサイト制作アイコン.png rel="icon">
 </head>
 <body>
 <link href="style.css" rel="stylesheet"> <!--GithubPagesはBody内にCSSを適応させないと反応しません！--->
 <!--ここからHTMLコードを書いてください-->
 <div id="text1">
-    <h1>Login</h1>
-<form id="loginForm">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username"><br>
-
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password"><br>
-
-    <button type="submit" onclick="login()">Login</button>
-</form>
-
-<h1>Register</h1>
-<form id="registerForm">
-    <label for="newUsername">New Username:</label>
-    <input type="text" id="newUsername" name="newUsername"><br>
-
-    <label for="newPassword">New Password:</label>
-    <input type="password" id="newPassword" name="newPassword"><br>
-
-    <button type="submit" onclick="register()">Register</button>
-</form>
-
-<h1>Password Reset</h1>
-<form id="resetForm">
-    <label for="resetUsername">Username:</label>
-    <input type="text" id="resetUsername" name="resetUsername"><br>
-
-    <button type="submit" onclick="resetPassword()">Reset Password</button>
-</form>
+    <h3>どうもWebサイトです</h3>
 </div>
-<script src="main.js"></script>
+<div class="Copy">
+    <h2>&copy;2023UchidasDevelopmentCanpany</h2>
+</div>
 </body>
 </html>
