--- a/index.html
+++ b/index.html
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
-<html lang="ja">
+<!doctype html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>WebSiteTask</title>
-    <link href=icon/Webサイト制作アイコン.png rel="icon">
 </head>
 <body>
-<link href="style.css" rel="stylesheet"> <!--GithubPagesはBody内にCSSを適応させないと反応しません！--->
-<!--ここからHTMLコードを書いてください-->
-<div id="text1">
-    <h3>どうもWebサイトです</h3>
-</div>
-<div class="Copy">
-    <h2>&copy;2023UchidasDevelopmentCanpany</h2>
-</div>
+<link href="style.css" rel="stylesheet">
 </body>
 </html>
