--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>WebSiteTask</title>
+    <link href="icon/Webサイト制作アイコン.png" rel="icon">
 </head>
 <body>
 <link href="style.css" rel="stylesheet">
+<div class="Heder">
+    <h2>これはテストです</h2>
+</div>
 </body>
 </html>
