--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
     <link href="icon/Webサイト制作アイコン.png" rel="icon">
 </head>
 <body>
+<div class="time">
+    <h2>時刻は<span id="time"></span>です</h2>
+    <script src="main.js"></script>
+</div>
 <link href="style.css" rel="stylesheet">
 <div class="Heder">
     <h2>これはテストです</h2>
+</div>
+<div class="text1">
+
 </div>
 </body>
 </html>
