--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!Doctype html>
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
@@ -19,6 +19,12 @@
 </div>
 <div class="text1">
 <h3>このサイトは仮掲載で行っています</h3>
+</div>
+<div class="text2">
+
+</div>
+<div class="Copy">
+    <h2>&copy;2023UchidsDevelopmentCanpany</h2>
 </div>
 </body>
 </html>
