--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <h2>これはテストです</h2>
 </div>
 <div class="text1">
-<h3>このサイトは仮掲載で行っています</h3>
+<h3>Untiyの制作物を展示しているサイトです</h3>
 </div>
 <div class="text2">
-
+<h3></h3>
 </div>
 <div class="Copy">
     <h2>&copy;2023UchidsDevelopmentCanpany</h2>
