--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <h3>Untiyの制作物を展示しているサイトです</h3>
 </div>
 <div class="text2">
-<h3></h3>
+<h3>このサイトにはBGMがあります</h3>
 </div>
 <div class="Copy">
     <h2>&copy;2023UchidsDevelopmentCanpany</h2>
